src/index.scss
html {
	overflow-x: hidden;
}

body {
    padding-right: 0px !important; // can't quite figure out why MUI likes to change the padding when opening a menu or dialog
}

:root {
	/* Main color palette */
	--greenPrimary: #0c6;
	--greenSecondary: #095;
	--redPrimary: #f34;
	--redSecondary: #b23;
	--bluePrimary: #19f;
	--blueSecondary: #17c;
	--yellowPrimary: #fb2;
	--yellowSecondary: #d92;
	--textPrimary: #bbb;
	--textSecondary: #eee;
	--textTertiary: #fff;
	--backgroundPrimary: #111;
	--backgroundSecondary: #222;
	--backgroundTertiary: #333;
	/* Easing */
	--easeOut: cubic-bezier(0, 0, 0.2, 1);
	--easeInOut: cubic-bezier(0.6, 0, 0.1, 1);
	/* Inset box shadow offsets */
	--boxInsetBody: -1.3rem;
	--boxInsetH2: -2.75rem;
	--boxInsetH3: -2rem;
	/* Fonts */
	--fontPrimary: Silka, Metropolis, "Clarity City", Monserrat, Roboto, "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, Arial, sans-serif;
	--fontSecondary: "Basier Square", Roboto, "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, Arial, sans-serif;
	/* Top margin */
	--marginTop: 145px;
	@media only screen and (max-width: 1199px) {
		--marginTop: 100px;
	}
}

/* Scrollbars */
::-webkit-scrollbar {
	width: 16px;
}
::-webkit-scrollbar-track {
	background: var(--backgroundPrimary);
	border-radius: 8px;
	border: 4px solid var(--backgroundPrimary);
}
::-webkit-scrollbar-thumb {
	background: #202020;
	border-radius: 8px;
	border: 4px solid var(--backgroundPrimary);
}
::-webkit-scrollbar-thumb:hover {
	background: var(--backgroundTertiary);
}

/* Text selection */
::selection {
	color: var(--backgroundPrimary);
	background: var(--greenPrimary);
}

@keyframes fadeBottom {
	0% {
		opacity: 0;
		transform: translateY(20px);
	}
	50% {
		opacity: 1;
	}
	100% {
		opacity: 1;
		transform: translateY(0px);
	}
}
@keyframes fadeTop {
	0% {
		opacity: 0;
		transform: translateY(-20px);
	}
	50% {
		opacity: 1;
	}
	100% {
		opacity: 1;
		transform: translateY(0px);
	}
}
@keyframes fadeTopLoop {
	0% {
		opacity: 0;
		transform: translateY(-10px);
	}
	20% {
		opacity: 1;
	}
	50% {
		opacity: 1;
	}
	100% {
		opacity: 0;
		transform: translateY(10px);
	}
}

.navlink a {
	display: inline-block;
	transition: all 0.2s var(--easeOut);
	color: var(--textPrimary);
	text-align: right;
	margin-left: 15px;
    &.active {
        color: var(--textSecondary) !important;
    }
	&:hover {
		color: var(--textSecondary);
	}
	&:focus-visible {
		background-color: var(--backgroundTertiary);
	}
}

.MuiAppBar-root {
	opacity: 0;
	animation: fadeTop 0.375s var(--easeOut) forwards;
	transition: 0.375s;
}
.MuiDialog-paper {
	opacity: 0;
	animation: fadeBottom 0.375s var(--easeOut) .14s forwards;
	transition: 0.375s;
}

.content {
	opacity: 0;
	animation: fadeBottom 0.375s var(--easeOut) 0.08s forwards;
}

.section {
	margin-top: 10vh;
}

footer {
	padding: 40px 0 30px 0;
	text-align: center;
	.copyright {
		animation: fadeBottom 0.375s var(--easeOut) 0.18s forwards;
		opacity: 0;
	}
    #footerButtons {
		.MuiIconButton-sizeLarge,
        .MuiButton-root,
        .MuiDivider-root {
			opacity: 0;
			animation: fadeBottom 0.375s var(--easeOut) 0.3s forwards;
			margin: 5px;
		}
	}
}
.fullscreen {
	height: 100vh;
	position: relative;
	img {
		left: 50%;
		transform: translate(-50%, -50%);
		animation: fadeTop 1.2s var(--easeOut) 0.2s forwards;
		opacity: 0;
		min-height: 50%;
	}
	.title {
		position: absolute;
		top: 40vh;
		left: 50%;
		transform: translate(-50%, -50%);
		h1,
		img {
			animation: fadeBottom 1.2s var(--easeOut) 0.2s forwards;
			opacity: 0;
			max-width: 100%;
		}
		img {
			height: 6rem;
			padding-bottom: 16px;
			@media only screen and (max-width: 1199px) {
				height: 4rem;
			}
		}
		h2 {
			animation: fadeBottom 1s var(--easeOut) 0.3s forwards;
			opacity: 0;
		}
		button {
			animation: fadeBottom 1s var(--easeOut) 0.4s forwards;
			opacity: 0;
		}
		svg {
			opacity: 0;
			animation: fadeTopLoop 1s var(--easeOut) 1.5s infinite;
		}
	}
}

@media only screen and (max-width: 1199px) {
	h1 {
		font-size: 3rem !important;
	}
	h2 {
		font-size: 1.5rem !important;
	}
}
.title {
	margin-top: var(--marginTop);
	margin-bottom: 25px;
	h1 {
		animation: fadeBottom 0.375s var(--easeOut) forwards;
		opacity: 0;
		font-size: 6rem;
	}
	h2 {
		animation: fadeBottom 0.375s var(--easeOut) 0.04s forwards;
		opacity: 0;
		font-size: 2.25rem;
	}
	@media only screen and (max-width: 1199px) {
		h1 {
			font-size: 3.5rem !important;
		}
		h2 {
			font-size: 1.5rem !important;
		}
	}
}

/* General styles for links */
a {
	text-decoration: none !important;
	outline: none;
	color: var(--textSecondary);
	transition: background-color 0.15s;
}
/* General styles for links when tabbing through them */
p a:focus-visible,
h2 a:focus-visible,
h3 a:focus-visible {
	background-color: rgba(255, 255, 255, 0.12);
}

/* Underline for text links */
p a,
h2 a,
h3 a {
	transition: all 0.2s var(--easeOut);
	box-shadow: inset 0 -1px 0 #ffffff55;
	margin: 0 0.35rem;
	padding: 0;
	&:hover {
		color: var(--backgroundPrimary);
		border-radius: 4px;
		margin: 0;
		padding: 0 0.35rem;
	}
}
/* Specific inset positions for each text size needed */
p a:hover {
	box-shadow: inset 0 var(--boxInsetBody) 0 var(--greenPrimary);
}
h2 a:hover {
	box-shadow: inset 0 var(--boxInsetH2) 0 var(--greenPrimary);
}
h3 a:hover {
	box-shadow: inset 0 var(--boxInsetH3) 0 var(--greenPrimary);
}
/* Special underline for external links */
p a.external {
	position: relative;
	margin: 0 0.4rem 0 0.3rem;
	padding: 0;
	&:hover {
		margin: 0;
		padding: 0 0.4rem 0 0.3rem;
	}
}
/* That arrow */
a.external::after {
	content: "↗";
    font-family: var(--fontPrimary);
	color: var(--bluePrimary);
	transition: all 0.15s;
	position: relative;
	top: 0.2rem;
	left: 0.2rem;
	margin-right: 0.3rem;
}
a.external:hover::after {
	color: var(--backgroundPrimary);
	top: 0rem;
	left: 0.45rem;
}
/* Specific inset positions for each text size needed */
p a.external:hover {
	box-shadow: inset 0 var(--boxInsetBody) 0 var(--bluePrimary);
}
h2 a.external:hover {
	box-shadow: inset 0 var(--boxInsetH2) 0 var(--bluePrimary);
}
h3 a.external:hover {
	box-shadow: inset 0 var(--boxInsetH3) 0 var(--bluePrimary);
}

img {
	-webkit-user-drag: none;
	user-select: none;
}

.MuiListItemIcon-root {
	font-size: 20px;
}
.MuiListItemText-root {
	color: var(--textPrimary);
}

.MuiCircularProgress-root {
	color: var(--textSecondary) !important;
}

/* Standard paddings on cards suck. */
.MuiCardContent-root {
	padding: 16px 24px 16px 24px;
}
.MuiCardActions-root {
	padding: 0 16px 16px 16px;
}
.MuiAccordionSummary-root {
	padding: 4px 24px;
	h3 {
		padding: 0 !important;
	}
}
.MuiAccordionDetails-root {
	padding: 8px 24px 24px;
}

